--- a/src/app/departments/departments.component.html
+++ b/src/app/departments/departments.component.html
@@ -4,7 +4,7 @@
       <ul class="glide__slides">
         <li class="glide__slide">
           <div class="d-image">
-            <img src="/assets/events.png" (click)="redirect('departmentdetail')" class="glide-img" (mouseenter)="zoomIn($event)" (mouseleave)="zoomOut($event)">
+            <img src="/assets/events.png" (click)="redirect('departmentdetail/events')" class="glide-img" (mouseenter)="zoomIn($event)" (mouseleave)="zoomOut($event)">
           </div>
           <div class="text-num text-center text-uppercase">
             01
