--- a/src/app/departmentdetail/departmentdetail.component.html
+++ b/src/app/departmentdetail/departmentdetail.component.html
@@ -75,7 +75,7 @@
 </div>
 
 
-<div class="mobile" *ngIf="mobile">
+<div class="mobile" *ngIf="mobile && eventspage">
 	<div class="row mb-5" *ngFor="let event of events">
 		<div [@fade]="trigger" (@fade.done)="callbackHandler()" class="col-12 col-md-4">
 			<img src="assets/events_scroll.png" (mouseenter) = "showOtherImage()"  [class.d-none]="multiple" style="width:100%; object-fit: cover;margin-top: 20%" class="single-pics">
@@ -104,3 +104,35 @@
 		</div>
 	</div>
 </div>
+
+
+<div class="mobile" *ngIf="mobile && !eventspage">
+	<div class="row mb-5" *ngFor="let event of events">
+		<div [@fade]="trigger" (@fade.done)="callbackHandler()" class="col-12 col-md-4">
+			<img src="assets/events_scroll.png" (mouseenter) = "showOtherImage()"  [class.d-none]="multiple" style="width:100%; object-fit: cover;margin-top: 20%" class="single-pics">
+			<img src="assets/multiple_photos.png" (mouseleave) = "showOtherImage()" [class.d-none]="!multiple" style="width:100%; object-fit: cover;margin-top: 0%" class="multiple-pics">
+		</div>
+		<div [@fade]="trigger" (@fade.done)="callbackHandler()" class="col-12 col-md-7">
+			<div class="text">
+				<div class="row" style=" border-bottom:2px solid white;padding-bottom: 0; margin-bottom: 16px;">
+					<div class="col-12 text-center">
+						<p class="head text-uppercase" style="margin-bottom:0">{{event.name}}</p>
+					</div>
+				</div>
+				<p class="description">
+					{{event.description}}
+				</p>
+				<div class="blur-div" (mouseenter)="toggleTrigger()" (mouseleave)="toggleTrigger()" style="text-align: right" (click)="redirectTo('managerdetail/creatives')" >
+	            <div class="blur">
+	              <a class="nav-link"  id="register" style="min-height:100%;width:100%;position:absolute"></a>
+	            </div>
+	            <div [@tR]="stateRegister" class="blur-text">
+	              <a  class="text-uppercase text-white button-text" (@tR.done)="log($event)">Your manager peeps</a>
+	            </div>
+	          </div>
+
+			</div>
+		</div>
+	</div>
+</div>
+
