--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -61,7 +61,7 @@
    
     <div @footerAnimation class="footer row" *ngIf="footer">
       <div class="col-12 col-lg-6" *ngIf="smallWidth">
-         <p class="footer-text text-center" (click)="redirect('results')"><span class=" underline-footer d-inline-block" style="overflow-x: hidden">RESULTS OF REVERSE VIDEO CHALLENGE</span></p>
+         <p class="footer-text text-center font-weight-bold" (click)="redirect('results')"><span class=" underline-footer d-inline-block" style="overflow-x: hidden">RESULTS OF REVERSE VIDEO CHALLENGE</span></p>
       </div>
       <div class="col-12 col-lg-6 text-center text-lg-left">
           <span (click)="redirectAnotherPage('https://twitter.com/Techfest_IITB
