added youtube icon

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -66,12 +66,10 @@
       <div class="col-12 col-lg-6 text-center text-lg-left">
           <span (click)="redirectAnotherPage('https://twitter.com/Techfest_IITB
           ')" class="fa fa-twitter"></span>
-           <span (click)="redirectAnotherPage('https://www.linkedin.com/company/techfest/
-')" class="fa fa-linkedin"></span>
-          <span (click)="redirectAnotherPage('https://www.facebook.com/iitbombaytechfest
-')" class="fa fa-facebook"></span>
-          <span (click)="redirectAnotherPage('https://www.instagram.com/techfest_iitbombay/
-')" class="fa fa-instagram"></span>
+           <span (click)="redirectAnotherPage('https://www.linkedin.com/company/techfest/')" class="fa fa-linkedin"></span>
+          <span (click)="redirectAnotherPage('https://www.facebook.com/iitbombaytechfest')" class="fa fa-facebook"></span>
+          <span (click)="redirectAnotherPage('https://www.instagram.com/techfest_iitbombay/')" class="fa fa-instagram"></span>
+        <span (click)="redirectAnotherPage('https://www.youtube.com/user/techfestiitbombay')" class="fa fa-youtube"></span>
       </div>
       <div class="col-12 col-lg-6 results-div" *ngIf="!smallWidth">
         <p class="footer-text text-lg-right text-center" (click)="redirect('results')"><span class=" underline-footer d-inline-block" style="overflow-x: hidden;font-weight:bolder">RESULTS OF REVERSE VIDEO CHALLENGE</span></p>
