--- a/src/app/departments/departments.component.html
+++ b/src/app/departments/departments.component.html
@@ -26,7 +26,7 @@
         </li>
         <li class="glide__slide">
           <div class="d-image">
-            <img src="/assets/web.png" (click)="redirect('departmentdetail/web')" class="glide-img" (mouseenter)="zoomIn($event)" (mouseleave)="zoomOut($event)">
+            <img src="/assets/departments/web_main.png" (click)="redirect('departmentdetail/web')" class="glide-img" (mouseenter)="zoomIn($event)" (mouseleave)="zoomOut($event)">
           </div>
           <div class="text-num text-center text-uppercase">
             03
@@ -49,7 +49,7 @@
 
         <li class="glide__slide">
           <div class="d-image">
-            <img src="/assets/infrastructure.png" class="glide-img" (click)="redirect('departmentdetail/mediaandpublicity')" (mouseenter)="zoomIn($event)" (mouseleave)="zoomOut($event)">
+            <img src="/assets/departments/media_main.png" class="glide-img" (click)="redirect('departmentdetail/mediaandpublicity')" (mouseenter)="zoomIn($event)" (mouseleave)="zoomOut($event)">
           </div>
           <div class="text-num text-center text-uppercase">
             05
@@ -61,7 +61,7 @@
 
         <li class="glide__slide">
           <div class="d-image">
-            <img src="/assets/infrastructure.png" class="glide-img" (click)="redirect('departmentdetail/hospitality')" (mouseenter)="zoomIn($event)" (mouseleave)="zoomOut($event)">
+            <img src="/assets/departments/hospitality_main.png" class="glide-img" (click)="redirect('departmentdetail/hospitality')" (mouseenter)="zoomIn($event)" (mouseleave)="zoomOut($event)">
           </div>
           <div class="text-num text-center text-uppercase">
             06
@@ -73,7 +73,7 @@
 
         <li class="glide__slide">
           <div class="d-image">
-            <img src="/assets/infrastructure.png" class="glide-img" (click)="redirect('departmentdetail/fnb')" (mouseenter)="zoomIn($event)" (mouseleave)="zoomOut($event)">
+            <img src="/assets/departments/fnb_main.png" class="glide-img" (click)="redirect('departmentdetail/fnb')" (mouseenter)="zoomIn($event)" (mouseleave)="zoomOut($event)">
           </div>
           <div class="text-num text-center text-uppercase">
             07
@@ -85,7 +85,7 @@
 
         <li class="glide__slide">
           <div class="d-image">
-            <img src="/assets/infrastructure.png" class="glide-img" (click)="redirect('departmentdetail/marketing')" (mouseenter)="zoomIn($event)" (mouseleave)="zoomOut($event)">
+            <img src="/assets/departments/marketing_main.png" class="glide-img" (click)="redirect('departmentdetail/marketing')" (mouseenter)="zoomIn($event)" (mouseleave)="zoomOut($event)">
           </div>
           <div class="text-num text-center text-uppercase">
             08
