fixed images in department detail view

--- a/src/app/departmentdetail/departmentdetail.component.html
+++ b/src/app/departmentdetail/departmentdetail.component.html
@@ -1,3 +1,4 @@
+<!-- NOT MOBILE VERSION -->
 <div class="container-fluid" *ngIf="eventspage">
 	<div class="row"  *ngIf="!mobile">
 		<div [@fade]="trigger" (@fade.done)="callbackHandler()" class="col-12 col-md-5">
@@ -17,7 +18,7 @@
 				<p class="description">
 					{{current_event.description}}
 				</p>
-				 <div class="blur-div" (mouseenter)="toggleTrigger()" (mouseleave)="toggleTrigger()" style="text-align: right" (click)="redirectTo('managerdetail/')"  >
+				 <div class="blur-div" (mouseenter)="toggleTrigger()" (mouseleave)="toggleTrigger()" style="text-align: right" (click)="redirectTo('managerdetail/')" id="events-blur-div" >
 	            <div class="blur">
 	              <a class="nav-link"  id="register" style="min-height:100%;width:100%;position:absolute"></a>
 	            </div>
@@ -42,12 +43,13 @@
 </div>
 
 
-<!-- Pages other than event because they contain only one category -->
+<!-- Pages other than event because they contain only one category  -->
+<!-- NOT MOBILE VERSION -->
 <div class="container-fluid" *ngIf="!eventspage">
 	<div class="row justify-content-center"  *ngIf="!mobile">
-		<div [@fade]="trigger" (@fade.done)="callbackHandler()" class="col-12 col-md-4">
-			<img src="assets/events_scroll.png" (mouseenter) = "showOtherImage()"  [class.d-none]="multiple" style="width:100%; object-fit: cover;margin-top: 20%" class="single-pics">
-			<img src="assets/multiple_photos.png" (mouseleave) = "showOtherImage()" [class.d-none]="!multiple" style="width:100%; object-fit: cover;margin-top: 0%" class="multiple-pics">
+		<div [@fade]="trigger" (@fade.done)="callbackHandler()" class="col-12 col-md-5">
+			<img src="assets/departments/{{currentpage.image}}" (mouseenter) = "showOtherImage()"  [class.d-none]="multiple" style="width:100%; object-fit: cover;margin-top: -5%" class="single-pics">
+			<img src="assets/departments/{{currentpage.image2}}" (mouseleave) = "showOtherImage()" [class.d-none]="!multiple" style="width:100%; object-fit: cover;margin-top: -8%;transform: scale(1.1)" class="multiple-pics">
 		</div>
 		<div [@fade]="trigger" (@fade.done)="callbackHandler()" class="col-12 col-md-7">
 			<div class="text">
@@ -77,6 +79,7 @@
 </div>
 
 
+<!-- EVENTS MOBILE PAGE.... -->
 <div class="mobile" *ngIf="mobile && eventspage">
 	<div class="row mb-5" *ngFor="let event of events">
 		<div [@fade]="trigger" (@fade.done)="callbackHandler()" class="col-12 col-md-4">
@@ -108,6 +111,9 @@
 </div>
 
 
+
+
+<!-- OTHER THAN EVENTS MOBILE PAGE -->
 <div class="mobile" *ngIf="mobile && !eventspage">
 	<div class="row mb-5" *ngFor="let event of events">
 		<div [@fade]="trigger" (@fade.done)="callbackHandler()" class="col-12 col-md-4">
