--- a/src/app/departmentdetail/departmentdetail.component.html
+++ b/src/app/departmentdetail/departmentdetail.component.html
@@ -82,13 +82,12 @@
 <!-- EVENTS MOBILE PAGE.... -->
 <div class="mobile" *ngIf="mobile && eventspage">
 	<div class="row mb-5" *ngFor="let event of events">
-		<div [@fade]="trigger" (@fade.done)="callbackHandler()" class="col-12 col-md-4">
-			<img src="assets/events_scroll.png" (mouseenter) = "showOtherImage()"  [class.d-none]="multiple" style="width:100%; object-fit: cover;margin-top: 20%" class="single-pics">
-			<img src="assets/multiple_photos.png" (mouseleave) = "showOtherImage()" [class.d-none]="!multiple" style="width:100%; object-fit: cover;margin-top: 0%" class="multiple-pics">
+		<div class="col-12 col-md-4">
+			<img src="assets/departments/{{event.image}}" style="width:100%; object-fit: cover;margin-top: 10%;transform:scale(1.2)" class="single-pics">
 		</div>
 		<div [@fade]="trigger" (@fade.done)="callbackHandler()" class="col-12 col-md-7">
 			<div class="text">
-				<div class="row" style=" border-bottom:2px solid white;padding-bottom: 0; margin-bottom: 16px;">
+				<div class="row" style=" border-bottom:2px solid white;padding-bottom: 0;">
 					<div class="col-12 text-center">
 						<p class="head text-uppercase" style="margin-bottom:0">{{event.name}}</p>
 					</div>
@@ -116,9 +115,8 @@
 <!-- OTHER THAN EVENTS MOBILE PAGE -->
 <div class="mobile" *ngIf="mobile && !eventspage">
 	<div class="row mb-5" *ngFor="let event of events">
-		<div [@fade]="trigger" (@fade.done)="callbackHandler()" class="col-12 col-md-4">
-			<img src="assets/events_scroll.png" (mouseenter) = "showOtherImage()"  [class.d-none]="multiple" style="width:100%; object-fit: cover;margin-top: 20%" class="single-pics">
-			<img src="assets/multiple_photos.png" (mouseleave) = "showOtherImage()" [class.d-none]="!multiple" style="width:100%; object-fit: cover;margin-top: 0%" class="multiple-pics">
+		<div  class="col-12 col-md-4">
+			<img src="assets/departments/{{event.image}}" style="width:100%; object-fit: cover;margin-top: 10%;transform:scale(1.2)" class="single-pics">
 		</div>
 		<div [@fade]="trigger" (@fade.done)="callbackHandler()" class="col-12 col-md-7">
 			<div class="text">
