--- a/src/app/results/results.component.css
+++ b/src/app/results/results.component.css
@@ -108,4 +108,11 @@
 		margin-top:50%;
 	}
 
+	.text-header{
+		color:#fff;
+		font-weight: bold;
+		margin-bottom: 0;
+		transform: translateX(24px);
+	}
+
 }
