added play button

--- a/src/app/results/results.component.html
+++ b/src/app/results/results.component.html
@@ -13,10 +13,11 @@
 		<div class="col-12 col-md-3">
 			<div class="row">
 				<div class="col-12 manager-col">
-					<p class="manager-num text-center mt-4 mb-0">1st</p>
+					<p class="manager-num text-center mt-2 mb-0">1st</p>
 					<div class="image">
-						<img src="assets/shanbhag.png" class="manager-img">
+						<img src="https://image.shutterstock.com/image-photo/bright-spring-view-cameo-island-260nw-1048185397.jpg" class="manager-img">
 						<div class="medal-img"><img src="assets/gold.png"></div>
+						<a href="" class="round-button"><span class="fa fa-play" id="play"></span></a>
 					</div>
 					<p class="manager-name text-center">Krishnakant Suryavanshi</p>
 				</div>
@@ -26,10 +27,11 @@
 		<div class="col-12 col-md-3">
 			<div class="row">
 				<div class="col-12 manager-col">
-					<p class="manager-num text-center mt-4 mb-0">2nd</p>
+					<p class="manager-num text-center mt-2 position-label mb-0">2nd</p>
 					<div class="image">
-						<img src="assets/shanbhag.png" class="manager-img">
+						<img src="https://cdn.pixabay.com/photo/2015/04/23/22/00/tree-736885__340.jpg" class="manager-img">
 						<div class="medal-img"><img src="assets/silver.png"></div>
+						<a href="" class="round-button"><span class="fa fa-play" id="play"></span></a>
 					</div>
 					<p class="manager-name text-center">Krishnakant Suryavanshi</p>
 				</div>
@@ -39,10 +41,11 @@
 		<div class="col-12 col-md-3">
 			<div class="row">
 				<div class="col-12 manager-col">
-					<p class="manager-num text-center mt-4 mb-0">3rd</p>
+					<p class="manager-num text-center mt-2 position-label  mb-0">3rd</p>
 					<div class="image">
-						<img src="assets/shanbhag.png" class="manager-img">
+						<img src="https://www.w3schools.com/w3css/img_lights.jpg" class="manager-img">
 						<div class="medal-img"><img src="assets/bronze.png"></div>
+						<a href="" class="round-button"><span class="fa fa-play" id="play"></span></a>
 					</div>
 					<p class="manager-name text-center">Krishnakant Suryavanshi</p>
 				</div>
