--- a/src/app/results/results.component.css
+++ b/src/app/results/results.component.css
@@ -6,6 +6,7 @@
 
 .head-row{
 	border-bottom:2px solid #fff;
+	transform: translateY(-35%);
 }
 
 .cross{
@@ -23,10 +24,10 @@
 }
 
 .manager-img{
-	width:100%;
+	width:300px;
 	object-fit:cover;
 	object-position: top;
-	max-height: 300px;
+	height: 275px;
 }
 
 .manager-name,.manager-num{
@@ -37,6 +38,7 @@
 .manager-name{
 	font-weight: bold;
 	margin-bottom: 0;
+	margin-top:32px;
 }
 
 
@@ -69,6 +71,8 @@
 
 /********Absolutely positioning leaves*******/
 .image{
+	width:300px;
+	height: 275px;
 	position: relative;
 }
 
@@ -76,7 +80,7 @@
 	position: absolute;
 	text-align:center;
 	width: 100%;
-	bottom:0%;
+	bottom:-15%;
 }
 
 .medal-img img{
@@ -115,4 +119,47 @@
 		transform: translateX(24px);
 	}
 
+	.head-row{
+		transform: translateY(-0%);
+	}
+
+	.position-label{
+		margin-top:64px !important;
+	}
+
+}
+
+
+/*****Play Button *****/
+.round-button {
+	position:absolute;
+	top:35%;
+	left:36%;
+	box-sizing: border-box;
+	display:block;
+	width:80px;
+	height:80px;
+	padding-top: 14px;
+	padding-left: 8px;
+	line-height: 20px;
+	border: 6px solid #fff;
+	border-radius: 50%;
+	color:#0a193b;
+	text-align:center;
+	text-decoration:none;
+	background-color: white;
+	font-size:20px;
+	font-weight:bold;
+	transition: all 0.3s ease;
+}
+
+#play{
+	color:#0a193b;
+	transform: translateY(-10%);
+	opacity: 1;
+}
+
+.round-button:hover {
+	background-color: white;
+	box-shadow: 0px 0px 10px #0A193B;
 }
