added some manager names

--- a/src/app/managerdetail/managerdetail.component.html
+++ b/src/app/managerdetail/managerdetail.component.html
@@ -32,14 +32,14 @@
 				<div class="col-12 manager-col">
 					<img src="assets/managers/Ravi-min.png" class="manager-img">
 					<p class="manager-name text-center">Ravi Jangir</p>
-					<p class="manager-num text-center">000090</p>
+					<p class="manager-num text-center">999 646 9559</p>
 				</div>
 			</div>
 			 <div class="row mt-4" style="padding-bottom:32px;">
 				  <div class="col-12 text-center icons">
-			          <span class="fa fa-whatsapp"></span>
-			          <span class="fa fa-facebook"></span>
-			          <span class="fa fa-instagram"></span>
+			          <span (click)="redirectTo('')" class="fa fa-whatsapp"></span>
+			          <span (click)="redirectTo('https://www.facebook.com/profile.php?id=100030344860721')" class="fa fa-facebook"></span>
+			          <span (click)="redirectTo('https://www.instagram.com/r.jangir1107/')" class="fa fa-instagram"></span>
 			      </div>
 			  </div>
 		</div>
@@ -83,9 +83,9 @@
 			</div>
 			 <div class="row mt-4" style="padding-bottom:32px;">
 				  <div class="col-12 text-center icons">
-			          <span class="fa fa-whatsapp"></span>
-			          <span class="fa fa-facebook"></span>
-			          <span class="fa fa-instagram"></span>
+			          <span (click)="redirectTo('')"  class="fa fa-whatsapp"></span>
+			          <span (click)="redirectTo(manager.fb)"  class="fa fa-facebook"></span>
+			          <span (click)="redirectTo(manager.insta)"  class="fa fa-instagram"></span>
 			      </div>
 			  </div>
 		</div>
@@ -127,14 +127,14 @@
 				<div class="col-12 manager-col">
 					<img src="assets/managers/Vivek-min.png" class="manager-img">
 					<p class="manager-name text-center">Vivek Saurabh Verma</p>
-					<p class="manager-num text-center">000090</p>
+					<p class="manager-num text-center">946 230 0696</p>
 				</div>
 			</div>
 			 <div class="row mt-4" style="padding-bottom:32px;">
 				  <div class="col-12 text-center icons">
-			          <span class="fa fa-whatsapp"></span>
-			          <span class="fa fa-facebook"></span>
-			          <span class="fa fa-instagram"></span>
+			          <span (click)="redirectTo('')" class="fa fa-whatsapp"></span>
+			          <span (click)="redirectTo('https://www.facebook.com/viveksaurabh.verma')" class="fa fa-facebook"></span>
+			          <span (click)="redirectTo('https://www.instagram.com/viveksaurabhverma/')" class="fa fa-instagram"></span>
 			      </div>
 			  </div>
 		</div>
@@ -178,14 +178,14 @@
 				<div class="col-12 manager-col">
 					<img src="assets/managers/rahul-yadav-min.png" class="manager-img">
 					<p class="manager-name text-center">Rahul Yadav</p>
-					<p class="manager-num text-center">000090</p>
+					<p class="manager-num text-center">855 980 7091</p>
 				</div>
 			</div>
 			 <div class="row mt-4" style="padding-bottom:32px;">
 				  <div class="col-12 text-center icons">
-			          <span class="fa fa-whatsapp"></span>
-			          <span class="fa fa-facebook"></span>
-			          <span class="fa fa-instagram"></span>
+			          <span (click)="redirectTo('')" class="fa fa-whatsapp"></span>
+			          <span (click)="redirectTo('https://www.facebook.com/profile.php?id=100003785771726')" class="fa fa-facebook"></span>
+			          <span (click)="redirectTo('https://www.instagram.com/rahul7414yadav/')" class="fa fa-instagram"></span>
 			      </div>
 			  </div>
 		</div>
@@ -195,15 +195,15 @@
 			<div class="row">
 				<div class="col-12 manager-col">
 					<img src="assets/managers/Shashwat-min.png" class="manager-img">
-					<p class="manager-name text-center">shashwat kumar</p>
-					<p class="manager-num text-center">000090</p>
+					<p class="manager-name text-center">Shashwat Kumar</p>
+					<p class="manager-num text-center">879 318 9752</p>
 				</div>
 			</div>
 			 <div class="row mt-4" style="padding-bottom:32px;">
 				  <div class="col-12 text-center icons">
-			          <span class="fa fa-whatsapp"></span>
-			          <span class="fa fa-facebook"></span>
-			          <span class="fa fa-instagram"></span>
+			          <span (click)="redirectTo('')" class="fa fa-whatsapp"></span>
+			          <span (click)="redirectTo('https://www.facebook.com/shashwat.kumar.77377')" class="fa fa-facebook"></span>
+			          <span (click)="redirectTo('https://www.instagram.com/shashwat.kumar19/?hl=en')" class="fa fa-instagram"></span>
 			      </div>
 			  </div>
 		</div>
@@ -249,9 +249,9 @@
 			</div>
 			 <div class="row mt-4" style="padding-bottom:32px;">
 				  <div class="col-12 text-center icons">
-			          <span class="fa fa-whatsapp"></span>
-			          <span class="fa fa-facebook"></span>
-			          <span class="fa fa-instagram"></span>
+			          <span (click)="redirectTo('')" class="fa fa-whatsapp"></span>
+			          <span (click)="redirectTo('https://www.facebook.com/amanmishra.2999/')" class="fa fa-facebook"></span>
+			          <span (click)="redirectTo('https://www.instagram.com/amannmishraa/')" class="fa fa-instagram"></span>
 			      </div>
 			  </div>
 		</div>
@@ -267,9 +267,9 @@
 			</div>
 			 <div class="row mt-4" style="padding-bottom:32px;">
 				  <div class="col-12 text-center icons">
-			          <span class="fa fa-whatsapp"></span>
-			          <span class="fa fa-facebook"></span>
-			          <span class="fa fa-instagram"></span>
+			          <span (click)="redirectTo('')" class="fa fa-whatsapp"></span>
+			          <span (click)="redirectTo('https://www.facebook.com/ritwik.kadu/')" class="fa fa-facebook"></span>
+			          <span (click)="redirectTo('https://www.instagram.com/ritwikkadu/')" class="fa fa-instagram"></span>
 			      </div>
 			  </div>
 		</div>
@@ -312,14 +312,14 @@
 				<div class="col-12 manager-col">
 					<img src="assets/managers/Anand-min.png" class="manager-img">
 					<p class="manager-name text-center">S. Anand Natarajan</p>
-					<p class="manager-num text-center">000090</p>
+					<p class="manager-num text-center">984 910 0940</p>
 				</div>
 			</div>
 			 <div class="row mt-4" style="padding-bottom:32px;">
 				  <div class="col-12 text-center icons">
-			          <span class="fa fa-whatsapp"></span>
-			          <span class="fa fa-facebook"></span>
-			          <span class="fa fa-instagram"></span>
+			          <span (click)="redirectTo('')" class="fa fa-whatsapp"></span>
+			          <span (click)="redirectTo('https://www.facebook.com/anandnatarajan.sriram')" class="fa fa-facebook"></span>
+			          <span (click)="redirectTo('https://www.instagram.com/s.anand.n/')" class="fa fa-instagram"></span>
 			      </div>
 			  </div>
 		</div>
@@ -362,14 +362,14 @@
 				<div class="col-12 manager-col">
 					<img src="assets/managers/Prasanna-min.png" class="manager-img">
 					<p class="manager-name text-center">Prasanna Talwane</p>
-					<p class="manager-num text-center">000090</p>
+					<p class="manager-num text-center">917 258 5090</p>
 				</div>
 			</div>
 			 <div class="row mt-4" style="padding-bottom:32px;">
 				  <div class="col-12 text-center icons">
-			          <span class="fa fa-whatsapp"></span>
-			          <span class="fa fa-facebook"></span>
-			          <span class="fa fa-instagram"></span>
+			          <span (click)="redirectTo('')" class="fa fa-whatsapp"></span>
+			          <span (click)="redirectTo('https://m.facebook.com/prasanna.vivek.telawane')" class="fa fa-facebook"></span>
+			          <span (click)="redirectTo('https://www.instagram.com/prasutelawane/')" class="fa fa-instagram"></span>
 			      </div>
 			  </div>
 		</div>
@@ -415,14 +415,14 @@
 				<div class="col-12 manager-col">
 					<img src="assets/managers/Shashank-min.png" class="manager-img">
 					<p class="manager-name text-center">Shashank Tomar</p>
-					<p class="manager-num text-center">000090</p>
+					<p class="manager-num text-center">956 008 6961</p>
 				</div>
 			</div>
 			 <div class="row mt-4" style="padding-bottom:32px;">
 				  <div class="col-12 text-center icons">
-			          <span class="fa fa-whatsapp"></span>
-			          <span class="fa fa-facebook"></span>
-			          <span class="fa fa-instagram"></span>
+			          <span (click)="redirectTo('https://api.whatsapp.com/send?phone=+9560086961')" class="fa fa-whatsapp"></span>
+			          <span (click)="redirectTo('https://www.facebook.com/shashanktomar.11')" class="fa fa-facebook"></span>
+			          <span (click)="redirectTo('https://www.instagram.com/shashankt.11/')" class="fa fa-instagram"></span>
 			      </div>
 			  </div>
 		</div>
@@ -433,14 +433,14 @@
 				<div class="col-12 manager-col">
 					<img src="assets/managers/Siddharth-min.png" class="manager-img">
 					<p class="manager-name text-center">Siddharth Singh</p>
-					<p class="manager-num text-center">000090</p>
+					<p class="manager-num text-center">996 780 6330</p>
 				</div>
 			</div>
 			 <div class="row mt-4" style="padding-bottom:32px;">
 				  <div class="col-12 text-center icons">
-			          <span class="fa fa-whatsapp"></span>
-			          <span class="fa fa-facebook"></span>
-			          <span class="fa fa-instagram"></span>
+			          <span (click)="redirectTo('')" class="fa fa-whatsapp"></span>
+			          <span (click)="redirectTo('https://www.facebook.com/sid211101')" class="fa fa-facebook"></span>
+			          <span (click)="redirectTo('https://www.instagram.com/sid_singh476/')" class="fa fa-instagram"></span>
 			      </div>
 			  </div>
 		</div>
