--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -6,7 +6,9 @@
 				<p class="line"></p>
 			</div>
 			<div @animateContent class="col-12 col-md-10 text-center text-md-left">
-				<p class="description-text">Techfest is the annual science and technology festival of Indian Institute of Technology Bombay. It also refers to the independent body of students who organize this event along with many other social initiatives and outreach programs around the year. Techfest is known for hosting a variety of events that include competitions, exhibitions, lectures as well as workshops.</p>
+				<p class="description-text">This is probably the question you’re most curious to know the answer to!
+Techfest provides you with opportunities and skills that play an essential role in the development of your personality. From managing organizers to handling events, Techfest equips you with valuable skills such as communication, management, pressure handling and time management.  
+All in all, if you’re looking for opportunities to create memories and build relationships, come join us. Be a part of the Techfest family.</p>
 
 			</div>
 		</div>
@@ -22,7 +24,7 @@
 				<p class="line"></p>
 			</div>
 			<div @animateContent class="col-12 col-md-10 text-center text-md-left">
-				<p class="description-text">Techfest is the annual science and technology festival of Indian Institute of Technology Bombay. It also refers to the independent body of students who organize this event along with many other social initiatives and outreach programs around the year. Techfest is known for hosting a variety of events that include competitions, exhibitions, lectures as well as workshops.</p>
+				<p class="description-text">"Techfest is what the team wants." This one line has been passed down through each and every team ever since the conception of Techfest in 1998. In these unprecedented times, Team Techfest is on the lookout for highly charged individuals with new perspectives, new ideas and a whole lot of enthusiasm! So come, joine Team Techfest, and gain insights to how things work behind the scenes of one of the largest festivals in the World, all while having fun and learning new skills!</p>
 
 			</div>
 		</div>
