--- a/src/app/managerdetail/managerdetail.component.html
+++ b/src/app/managerdetail/managerdetail.component.html
@@ -37,7 +37,7 @@
 			</div>
 			 <div class="row mt-4" style="padding-bottom:32px;">
 				  <div class="col-12 text-center icons">
-			          <span (click)="redirectTo('')" class="fa fa-whatsapp"></span>
+			          <span (click)="whatsapp('999 646 9559')" class="fa fa-whatsapp"></span>
 			          <span (click)="redirectTo('https://www.facebook.com/profile.php?id=100030344860721')" class="fa fa-facebook"></span>
 			          <span (click)="redirectTo('https://www.instagram.com/r.jangir1107/')" class="fa fa-instagram"></span>
 			      </div>
@@ -83,7 +83,7 @@
 			</div>
 			 <div class="row mt-4" style="padding-bottom:32px;">
 				  <div class="col-12 text-center icons">
-			          <span (click)="redirectTo('')"  class="fa fa-whatsapp"></span>
+			          <span (click)="redirectTo(manager.number)"  class="fa fa-whatsapp"></span>
 			          <span (click)="redirectTo(manager.fb)"  class="fa fa-facebook"></span>
 			          <span (click)="redirectTo(manager.insta)"  class="fa fa-instagram"></span>
 			      </div>
@@ -132,7 +132,7 @@
 			</div>
 			 <div class="row mt-4" style="padding-bottom:32px;">
 				  <div class="col-12 text-center icons">
-			          <span (click)="redirectTo('')" class="fa fa-whatsapp"></span>
+			          <span (click)="redirectTo(whatsapp('946 230 0696'))" class="fa fa-whatsapp"></span>
 			          <span (click)="redirectTo('https://www.facebook.com/viveksaurabh.verma')" class="fa fa-facebook"></span>
 			          <span (click)="redirectTo('https://www.instagram.com/viveksaurabhverma/')" class="fa fa-instagram"></span>
 			      </div>
@@ -183,7 +183,7 @@
 			</div>
 			 <div class="row mt-4" style="padding-bottom:32px;">
 				  <div class="col-12 text-center icons">
-			          <span (click)="redirectTo('')" class="fa fa-whatsapp"></span>
+			          <span (click)="whatsapp('855 980 7091')" class="fa fa-whatsapp"></span>
 			          <span (click)="redirectTo('https://www.facebook.com/profile.php?id=100003785771726')" class="fa fa-facebook"></span>
 			          <span (click)="redirectTo('https://www.instagram.com/rahul7414yadav/')" class="fa fa-instagram"></span>
 			      </div>
@@ -201,7 +201,7 @@
 			</div>
 			 <div class="row mt-4" style="padding-bottom:32px;">
 				  <div class="col-12 text-center icons">
-			          <span (click)="redirectTo('')" class="fa fa-whatsapp"></span>
+			          <span (click)="whatsapp('879 318 9752')" class="fa fa-whatsapp"></span>
 			          <span (click)="redirectTo('https://www.facebook.com/shashwat.kumar.77377')" class="fa fa-facebook"></span>
 			          <span (click)="redirectTo('https://www.instagram.com/shashwat.kumar19/?hl=en')" class="fa fa-instagram"></span>
 			      </div>
@@ -249,7 +249,7 @@
 			</div>
 			 <div class="row mt-4" style="padding-bottom:32px;">
 				  <div class="col-12 text-center icons">
-			          <span (click)="redirectTo('')" class="fa fa-whatsapp"></span>
+			          <span (click)="whatsapp('730 419 8634')" class="fa fa-whatsapp"></span>
 			          <span (click)="redirectTo('https://www.facebook.com/amanmishra.2999/')" class="fa fa-facebook"></span>
 			          <span (click)="redirectTo('https://www.instagram.com/amannmishraa/')" class="fa fa-instagram"></span>
 			      </div>
@@ -267,7 +267,7 @@
 			</div>
 			 <div class="row mt-4" style="padding-bottom:32px;">
 				  <div class="col-12 text-center icons">
-			          <span (click)="redirectTo('')" class="fa fa-whatsapp"></span>
+			          <span (click)="whatsapp('878 872 7737')" class="fa fa-whatsapp"></span>
 			          <span (click)="redirectTo('https://www.facebook.com/ritwik.kadu/')" class="fa fa-facebook"></span>
 			          <span (click)="redirectTo('https://www.instagram.com/ritwikkadu/')" class="fa fa-instagram"></span>
 			      </div>
@@ -317,7 +317,7 @@
 			</div>
 			 <div class="row mt-4" style="padding-bottom:32px;">
 				  <div class="col-12 text-center icons">
-			          <span (click)="redirectTo('')" class="fa fa-whatsapp"></span>
+			          <span (click)="whatsapp('984 910 0940')" class="fa fa-whatsapp"></span>
 			          <span (click)="redirectTo('https://www.facebook.com/anandnatarajan.sriram')" class="fa fa-facebook"></span>
 			          <span (click)="redirectTo('https://www.instagram.com/s.anand.n/')" class="fa fa-instagram"></span>
 			      </div>
@@ -367,7 +367,7 @@
 			</div>
 			 <div class="row mt-4" style="padding-bottom:32px;">
 				  <div class="col-12 text-center icons">
-			          <span (click)="redirectTo('')" class="fa fa-whatsapp"></span>
+			          <span (click)="whatsapp('917 258 5090')" class="fa fa-whatsapp"></span>
 			          <span (click)="redirectTo('https://m.facebook.com/prasanna.vivek.telawane')" class="fa fa-facebook"></span>
 			          <span (click)="redirectTo('https://www.instagram.com/prasutelawane/')" class="fa fa-instagram"></span>
 			      </div>
@@ -438,7 +438,7 @@
 			</div>
 			 <div class="row mt-4" style="padding-bottom:32px;">
 				  <div class="col-12 text-center icons">
-			          <span (click)="redirectTo('')" class="fa fa-whatsapp"></span>
+			          <span (click)="whatsapp('996 780 6330')" class="fa fa-whatsapp"></span>
 			          <span (click)="redirectTo('https://www.facebook.com/sid211101')" class="fa fa-facebook"></span>
 			          <span (click)="redirectTo('https://www.instagram.com/sid_singh476/')" class="fa fa-instagram"></span>
 			      </div>
