minor spelling change

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -24,7 +24,7 @@ All in all, if you’re looking for opportunities to create memories and build r
 				<p class="line"></p>
 			</div>
 			<div @animateContent class="col-12 col-md-10 text-center text-md-left">
-				<p class="description-text">"Techfest is what the team wants." This one line has been passed down through each and every team ever since the conception of Techfest in 1998. In these unprecedented times, Team Techfest is on the lookout for highly charged individuals with new perspectives, new ideas and a whole lot of enthusiasm! So come, joine Team Techfest, and gain insights to how things work behind the scenes of one of the largest festivals in the World, all while having fun and learning new skills!</p>
+				<p class="description-text">"Techfest is what the team wants." This one line has been passed down through each and every team ever since the conception of Techfest in 1998. In these unprecedented times, Team Techfest is on the lookout for highly charged individuals with new perspectives, new ideas and a whole lot of enthusiasm! So come, join Team Techfest, and gain insights to how things work behind the scenes of one of the largest festivals in the World, all while having fun and learning new skills!</p>
 
 			</div>
 		</div>
