added background image for phone

--- a/src/app/departments/departments.component.html
+++ b/src/app/departments/departments.component.html
@@ -55,7 +55,7 @@
             05
           </div>
           <div class="text-name text-center text-uppercase">
-            media and publicity
+            media & publicity
           </div>
         </li>
 
@@ -79,7 +79,7 @@
             07
           </div>
           <div class="text-name text-center text-uppercase">
-            food and beverages
+            food & beverages
           </div>
         </li>
 
