--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -288,10 +288,15 @@ body{
 	}
 
 	body{
-		background: url("/assets/backg_mobile.jpg");
+		background: url("/assets/backg_phone.png");
 		overflow:hidden;
-		 background-size: contain;
+		 /*background-size: contain;*/
 		 background-position: bottom;
+		  background-attachment: fixed;
+  background-repeat: no-repeat;
+  background-size: cover;
+   min-height:100vh;
+  	max-width:100vw;
 	}
 
 	.navbar-toggler{
