--- a/src/app/managerdetail/managerdetail.component.html
+++ b/src/app/managerdetail/managerdetail.component.html
@@ -6,10 +6,10 @@
 		<div class="container container-head">
 			<div class="row text-center head-row" *ngIf="!mobile">
 				<div class="col-10" >
-					<p class="text-left text-md-center"> <img src="assets/creatives_head.png" id="creatives-head" class="image-head"></p>
+					<p class="text-left text-md-center"> <img src="assets/creatives_manager_head.png" id="creatives-head-new" class="image-head"></p>
 				</div>
 				<div class="col-2" >
-					<p><img class="cross" (click)="redirectTo('departments')" src="/assets/cross.png"></p>
+					<p><img class="cross" (click)="redirectTo('departments')" src="/assets/cross.png" id="new-creatives-cross"></p>
 				</div>
 			</div>
 		</div>
