added new window for logo

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
 <div class="main-container">
 <nav @navAnimation class="navbar navbar-expand-lg bg-dark navbar-dark transparent-nav">
   <!-- Brand -->
-  <a class="navbar-brand" href="http://techfest.org/"><img src="assets/logo.png" class="logo"></a>
+  <a class="navbar-brand" target="_blank" href="http://techfest.org/"><img src="assets/logo.png" class="logo"></a>
 
   <!-- Toggler/collapsibe Button -->
   <button (click)="showCross()" class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
