--- a/src/app/results/results.component.html
+++ b/src/app/results/results.component.html
@@ -2,7 +2,7 @@
 	<div class="row text-center head-row">
 		<div class="col-10">
 			<p class="text-left text-md-center" *ngIf="!mobile"> <img src="assets/reversevc.png" class="image-head"></p>
-			<p class="text-center text-header" *ngIf="mobile"> RESULTS OF REVERSE VIDEO CHALLENGE</p>
+			<p class="text-center text-header mobile-text-results" *ngIf="mobile">RESULTS</p>
 		</div>
 		<div class="col-2">
 			<p><img class="cross" id="events-cross" (click)="redirect('')" src="/assets/cross.png"></p>
